# rpi_ws

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
custom_logger/: CMakeLists.txt  custom_logger.c
http_client/: CMakeLists.txt  http_client.c  http_client.h
http_server/: CMakeLists.txt  http_server.c  http_server.h
http_server/resource/certs/: generate.sh
